--- a/ASP_BlogSpot.csproj
+++ b/ASP_BlogSpot.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\BlogSpot\images\Blog\" />
+    <Folder Include="wwwroot\BlogSpot\images\WhatsTrending\" />
     <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
